src/objects/X10K_Launch_Episode__c.object
<CustomObject>
    <fields>
        <fullName>Episode_Description__c</fullName>
        <label>Episode Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Episode_Id__c</fullName>
        <label>Episode Id</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Episode_Number__c</fullName>
        <label>Episode Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>10K Launch Episode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Episode_Number__c</columns>
        <columns>Episode_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>10K Launch Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>10K Launch Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>